# Amni-Code

./: .gitignore  Cargo.toml  README.md  install_gui.py  quickstart.bat  run.bat  tutorial.md
src/: main.rs
static/: index.html
