[package]
name = "amni-code"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "amni"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
open = "5"
futures = "0.3"
tokio-stream = "0.1"
dirs = "5"
tao = "0.32"
wry = "0.47"
